2006-03-28  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-main-win.c:
	Small fix for ALT+[LETTER].

	* src/gnome-cmd-main-win.c:
        Fixed bug #332258 (left/right start directory parameter)

2006-03-27  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-win.c:
	* src/gnome-cmd-file-selector.c:
	* src/gnome-cmd-file-selector.h:
	* src/useractions.c:
	* src/useractions.h:
	* src/history.c:
	* src/history.h:
	Revamped toolbar layout.

2006-03-24  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-data.c:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-list.c:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-main-win.c:
	* src/gnome-cmd-options-dialog.c:
	Quick search by ALT+Letter(s)

2006-03-23  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-dir-indicator.c:
	* src/gnome-cmd-search-dialog.c:
	* src/owner.c:
	* src/utils.c:
	Fixed memory bugs

2006-03-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.c:
        Added CTRL+SHIFT+A for deselecting all files (for conformance with HIG 2.0)

2006-03-17  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-file-selector.c:
	Fixed a crash when viewing "SMB" connections.

	* src/ls_colors.c:
	Variable val might be read from uninitialized memory (if key is null)

2006-03-15  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-search-dialog.c:
	This should fix bug #171051

	* src/libgviewer/text-render.c:
	Fixed endless loop when viewing files > 40MB

	* src/libgviewer/cp437.c:
	* src/libgviewer/datapresentation.c:
	* src/libgviewer/datapresentation.h:
	* src/libgviewer/fileops.c:
	* src/libgviewer/fileops.h:
	* src/libgviewer/gvtypes.h:
	* src/libgviewer/image-render.c:
	* src/libgviewer/image-render.h:
	* src/libgviewer/inputmodes.c:
	* src/libgviewer/inputmodes.h:
	* src/libgviewer/libgviewer.c:
	* src/libgviewer/libgviewer.h:
	* src/libgviewer/scroll-box.c:
	* src/libgviewer/scroll-box.h:
	* src/libgviewer/text-render.c:
	* src/libgviewer/text-render.h: