@@ -32,6 +32,7 @@ struct _GnomeCmdQuicksearchPopupPrivate {
 
     GList *matches;
     GList *pos;
+    GnomeCmdFile *last_focused_file ;
 };
 
 
@@ -39,6 +40,7 @@ static void
 focus_file (GnomeCmdQuicksearchPopup *popup, GnomeCmdFile *finfo)
 {
     gint row = gnome_cmd_file_list_get_row_from_file (popup->priv->fl, finfo);
+    popup->priv->last_focused_file = finfo ;
     if (row > 0) {
         gtk_clist_moveto (GTK_CLIST (popup->priv->fl), row, 0, 1, 0);
         gtk_clist_freeze (GTK_CLIST (popup->priv->fl));
@@ -88,6 +90,10 @@ set_filter (GnomeCmdQuicksearchPopup *popup, const gchar *text)
         files = files->next;
     }
 
+    /* If no file matches the new filter, focus on the last file that matched a previous filter */
+    if (popup->priv->matches==NULL && popup->priv->last_focused_file!=NULL)
+        popup->priv->matches = g_list_append (popup->priv->matches, popup->priv->last_focused_file);
+	
     popup->priv->pos = popup->priv->matches;
 }
 
@@ -102,6 +108,7 @@ hide_popup (GnomeCmdQuicksearchPopup *popup)
     gtk_widget_grab_focus (GTK_WIDGET (popup->priv->fl));
     if (popup->priv->matches)
         g_list_free (popup->priv->matches);
+    popup->priv->last_focused_file = NULL ;
     gtk_widget_hide (GTK_WIDGET (popup));
 }
 
@@ -320,6 +327,7 @@ gnome_cmd_quicksearch_popup_new              (GnomeCmdFileList *fl)
     popup = gtk_type_new (gnome_cmd_quicksearch_popup_get_type ());
     GTK_WINDOW (popup)->type = GTK_WINDOW_POPUP;
     popup->priv->fl = fl;
+    popup->priv->last_focused_file = NULL ;
     set_popup_position (popup);
 
     return GTK_WIDGET (popup);
