@@ -6,6 +6,9 @@
 	* src/gnome-cmd-main-win.c:
         Fixed bug #332258 (left/right start directory parameter)
 
+	* src/gnome-cmd-quicksearch-popup.c:
+	Fixed leaving the focus on the last file that matched the quick-search filter
+
 2006-03-27  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-main-win.c:
